--- a/projeto/style.css
+++ b/projeto/style.css
@@ -3,23 +3,53 @@
 	padding: 0;
 }
 
+body{
+	background-image: url(bg.jpg);
+	font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+h1{
+	color: aliceblue;
+}
+
+#caixa{
+	text-align: center;
+	margin-top: 8em;
+}
+
+#calculadora{
+	padding: 50px 35px;
+	background-color: rgba(0, 0, 0, 0.8);
+	display: inline-block;
+	border-radius: 6px;
+	box-shadow: 1px 1px 12px rgba(255, 255, 255, 0.7);
+}
+
 #display input{
-	width: 14em;
+	width: 18em;
 	height: 3em;
-	border: 1px solid black;
-	margin: 3px;
+	border: none;
+	margin: 3px 3px 18px 3px;
+	background-color: aliceblue;
+	border-radius: 3px;
 }
 
 #linha1 button, #linha2 button, #linha3 button, #linha4 button{
-	width: 3em;
-	height: 3em;
+	width: 4em;
+	height: 4em;
 	border: 1px solid black;
+	background-color: aliceblue;
 	margin: 3px;
+	border-radius: 3px;
+	cursor: pointer;
 }
 
 #linha5 button{
-	width: 6.6em;
+	width: 8.8em;
 	height: 3em;
 	border: 1px solid black;
+	background-color: aliceblue;
 	margin: 3px;
+	border-radius: 3px;
+	cursor: pointer;
 }
