--- a/projeto/style.css
+++ b/projeto/style.css
@@ -27,11 +27,12 @@ h1{
 	box-shadow: 1px 1px 12px rgba(255, 255, 255, 0.7);
 }
 
-#display input{
-	width: 18em;
-	height: 3em;
-	padding: 8px;
+#display p{
+	width: 13em;
+	padding: 5px;
 	text-align: right;
+	height: 2em;
+	font-size: 22px;
 	border: none;
 	margin: 3px 3px 18px 3px;
 	background-color: aliceblue;
@@ -48,6 +49,7 @@ h1{
 	cursor: pointer;
 }
 
+
 #linha5 button{
 	width: 8.8em;
 	height: 3em;
@@ -56,4 +58,15 @@ h1{
 	margin: 3px;
 	border-radius: 3px;
 	cursor: pointer;
+}
+
+#linha1 button:hover, #linha2 button:hover, #linha3 button:hover, #linha4 button:hover, #linha5 button:hover{
+	background-color: black;
+	color: aliceblue;
+	border: 1px solid aliceblue;
+}
+
+#calculadora .notnum{
+	background-color: #525252;
+	color: aliceblue;
 }
